--- a/S01/SLU13 - Tree-Based Models/Exercise notebook.ipynb
+++ b/S01/SLU13 - Tree-Based Models/Exercise notebook.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -151,6 +151,183 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Outlook</th>\n",
+       "      <th>Temperature</th>\n",
+       "      <th>Humidity</th>\n",
+       "      <th>Windy</th>\n",
+       "      <th>Class</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>sunny</td>\n",
+       "      <td>hot</td>\n",
+       "      <td>high</td>\n",
+       "      <td>false</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>sunny</td>\n",
+       "      <td>hot</td>\n",
+       "      <td>high</td>\n",
+       "      <td>true</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>overcast</td>\n",
+       "      <td>hot</td>\n",
+       "      <td>high</td>\n",
+       "      <td>false</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>rain</td>\n",
+       "      <td>mild</td>\n",
+       "      <td>high</td>\n",
+       "      <td>false</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>rain</td>\n",
+       "      <td>cool</td>\n",
+       "      <td>normal</td>\n",
+       "      <td>false</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>rain</td>\n",
+       "      <td>cool</td>\n",
+       "      <td>normal</td>\n",
+       "      <td>false</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>overcast</td>\n",
+       "      <td>cool</td>\n",
+       "      <td>normal</td>\n",
+       "      <td>false</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>sunny</td>\n",
+       "      <td>mild</td>\n",
+       "      <td>high</td>\n",
+       "      <td>false</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>sunny</td>\n",
+       "      <td>cool</td>\n",
+       "      <td>normal</td>\n",
+       "      <td>false</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>rain</td>\n",
+       "      <td>mild</td>\n",
+       "      <td>normal</td>\n",
+       "      <td>false</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>sunny</td>\n",
+       "      <td>mild</td>\n",
+       "      <td>normal</td>\n",
+       "      <td>true</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>overcast</td>\n",
+       "      <td>mild</td>\n",
+       "      <td>high</td>\n",
+       "      <td>true</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>overcast</td>\n",
+       "      <td>hot</td>\n",
+       "      <td>normal</td>\n",
+       "      <td>false</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>rain</td>\n",
+       "      <td>mild</td>\n",
+       "      <td>high</td>\n",
+       "      <td>true</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Outlook Temperature Humidity  Windy  Class\n",
+       "0      sunny         hot     high  false      0\n",
+       "1      sunny         hot     high   true      0\n",
+       "2   overcast         hot     high  false      1\n",
+       "3       rain        mild     high  false      1\n",
+       "4       rain        cool   normal  false      1\n",
+       "5       rain        cool   normal  false      0\n",
+       "6   overcast        cool   normal  false      1\n",
+       "7      sunny        mild     high  false      0\n",
+       "8      sunny        cool   normal  false      1\n",
+       "9       rain        mild   normal  false      1\n",
+       "10     sunny        mild   normal   true      1\n",
+       "11  overcast        mild     high   true      1\n",
+       "12  overcast         hot   normal  false      1\n",
+       "13      rain        mild     high   true      0"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
    "metadata": {
     "deletable": false,
@@ -167,7 +344,7 @@
     "# single_node_gini = ...\n",
     "def compute_probability(node):\n",
     "    n = data.shape[0]\n",
-    "    f = (data['Windy'] == 'true').sum()\n",
+    "    f = (data['node'] == 'true').sum()\n",
     "\n",
     "    return f / n\n",
     "single_node_gini = compute_probability(data)\n",
