--- a/S01/SLU13 - Tree-Based Models/Exercise notebook.ipynb
+++ b/S01/SLU13 - Tree-Based Models/Exercise notebook.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
        "13      rain        mild     high   true      0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 49,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -342,18 +342,18 @@
    "outputs": [],
    "source": [
     "# single_node_gini = ...\n",
-    "def compute_probability(node):\n",
-    "    n = data.shape[0]\n",
-    "    f = (data['node'] == 'true').sum()\n",
+    "def compute_probability(data):\n",
+    "    n = data.shape[0]    \n",
+    "    f = (data['Class'] == 1).sum()\n",
     "\n",
     "    return f / n\n",
-    "single_node_gini = compute_probability(data)\n",
-    "# YOUR CODE HERE\n"
+    "\n",
+    "single_node_gini = compute_probability(data[data['Windy'] == 'true'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 51,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -366,19 +366,7 @@
      "solution": false
     }
    },
-   "outputs": [
-    {
-     "ename": "AssertionError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-14-35e6d08902a1>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mexpected_hash_5\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'd2cbad71ff333de67d07ec676e352ab7f38248eb69c942950157220607c55e84'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[1;32massert\u001b[0m \u001b[0mhashlib\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msha256\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msingle_node_gini\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mencode\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'utf-8'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhexdigest\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m==\u001b[0m \u001b[0mexpected_hash_5\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mAssertionError\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "expected_hash_5 = 'd2cbad71ff333de67d07ec676e352ab7f38248eb69c942950157220607c55e84'\n",
     "assert hashlib.sha256(str(single_node_gini).encode('utf-8')).hexdigest() == expected_hash_5"
@@ -407,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -424,13 +412,29 @@
     "\n",
     "\n",
     "def mean_impurity(data, feature_name):\n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()"
+    "    information = 0\n",
+    "    values = data[feature_name].unique()\n",
+    "    e=[]\n",
+    "    for value in values:\n",
+    "        group = data[data[feature_name] == value]\n",
+    "    \n",
+    "              \n",
+    "        p = compute_probability(group)\n",
+    "        e.append(gini(p))\n",
+    "    \n",
+    "    return mean(e)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -480,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -491,20 +495,33 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.4398148148148148\n",
+      "0.32\n",
+      "0.3673469387755103\n",
+      "0.45999999999999996\n"
+     ]
+    }
+   ],
    "source": [
     "# worst_split = 'Temperature'\n",
     "# worst_split = 'Outlook'\n",
     "# worst_split = 'Humidity'\n",
-    "# worst_split = 'Windy'\n",
+    "worst_split = 'Windy'\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "features=['Temperature','Outlook', 'Humidity', 'Windy']\n",
+    "for each in features:\n",
+    "    print(mean_impurity(data, each))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -561,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -577,15 +594,14 @@
     "# incorrect_statement_1 = 'Bagging helps to deal with overfitting, which is a big risk when using Decision Trees.'\n",
     "# incorrect_statement_1 = 'Bagging involves averaging the predictions of multiple independent models.'\n",
     "# incorrect_statement_1 = 'Bagging involves creating multiple data sets by sampling observations.'\n",
-    "# incorrect_statement_1 = 'Bagging involves creating multiple data sets by sampling columns.'\n",
+    "incorrect_statement_1 = 'Bagging involves creating multiple data sets by sampling columns.'\n",
     "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# YOUR CODE HERE\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -625,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -641,15 +657,14 @@
     "# incorrect_statement_2 = 'Random forests rely on bootstrapping to build several training sets.'\n",
     "# incorrect_statement_2 = 'Random forests rely on random feature selection before each split.'\n",
     "# incorrect_statement_2 = 'Random forests aggregates the predictions of multiple models running in parallel.'\n",
-    "# incorrect_statement_2 = 'Random forests aggregates the predictions of multiple models running sequentially.'\n",
+    "incorrect_statement_2 = 'Random forests aggregates the predictions of multiple models running sequentially.'\n",
     "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# YOUR CODE HERE\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -679,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -693,17 +708,16 @@
    "outputs": [],
    "source": [
     "# incorrect_statement_3 = 'Gradient boosting fits individual trees sequentially.'\n",
-    "# incorrect_statement_3 = 'Gradient boosting fits individual trees on the predictions from the previous tree.'\n",
+    "incorrect_statement_3 = 'Gradient boosting fits individual trees on the predictions from the previous tree.'\n",
     "# incorrect_statement_3 = 'Gradient boosting fits individual trees on the pseudo-residuals of the previous tree.'\n",
     "# incorrect_statement_3 = 'Gradient boosting can be used to optimize a differentiable cost function.'\n",
     "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# YOUR CODE HERE\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {
     "deletable": false,
     "editable": false,
