--- a/S01/SLU14 - k-Nearest Neighbors/Exercise notebook.ipynb
+++ b/S01/SLU14 - k-Nearest Neighbors/Exercise notebook.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 14,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -611,18 +611,14 @@
     "    \"\"\"\n",
     "\n",
     "    # YOUR CODE HERE\n",
-    "    distances.sort()\n",
-    "    indexes = []\n",
-    "    for x in range(k):\n",
-    "        indexes.append(distances[x])\n",
-    "    indexes=np.asarray(indexes)\n",
+    "    indexes = distances.argsort()[:k]\n",
     "    return indexes\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 15,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -635,19 +631,7 @@
      "solution": false
     }
    },
-   "outputs": [
-    {
-     "ename": "AssertionError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-60-55178b6fd8e8>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mknn\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mselect_nearest_neighbours\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrand\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m150\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m3\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;32massert\u001b[0m \u001b[0mknn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m \u001b[1;32massert\u001b[0m \u001b[0mhashlib\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msha256\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mbytes\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mknn\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhexdigest\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m'01d448afd928065458cf670b60f5a594d735af0172c8d67f22a81680132681ca'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      8\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[1;31m# Test case 2\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAssertionError\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# This is to make the random predictable\n",
     "np.random.seed(42)\n",
@@ -692,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 16,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -731,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 17,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -786,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 26,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -797,16 +781,7 @@
      "solution": true
     }
    },
-   "outputs": [
-    {
-     "ename": "IndentationError",
-     "evalue": "expected an indented block (<ipython-input-73-a164fda67acb>, line 16)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-73-a164fda67acb>\"\u001b[1;36m, line \u001b[1;32m16\u001b[0m\n\u001b[1;33m    dicts = {}\u001b[0m\n\u001b[1;37m        ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m expected an indented block\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# implement a function called predict_label_majority\n",
     "\n",
@@ -822,15 +797,16 @@
     "    ----------\n",
     "    label: int\n",
     "        \"\"\"\n",
-    "    from statistics import mode \n",
-    "\n",
-    "    label= mode(nn_labels)\n",
+    "    counts = np.bincount(nn_labels)\n",
+    "    \n",
+    "    label= int(np.argmax(counts))\n",
+    "    \n",
     "    return label"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 27,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -843,19 +819,7 @@
      "solution": false
     }
    },
-   "outputs": [
-    {
-     "ename": "AssertionError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-74-2cd3d2dc2e8f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;31m# Test case 1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0manswer\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpredict_label_majority\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrandint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m3\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[1;32massert\u001b[0m \u001b[0misinstance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0manswer\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mint\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m \u001b[1;32massert\u001b[0m \u001b[0mhashlib\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msha256\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mbytes\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0manswer\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhexdigest\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m'96a296d224f285c67bee93c30f8a309157f0daa35dc5b87e410b78630a09cfc7'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAssertionError\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "np.random.seed(42) \n",
     "\n",
@@ -902,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -935,12 +899,18 @@
     "    \"\"\"\n",
     "\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()"
+    "    distances= compute_distances(x, dataset, distance_function)\n",
+    "    nearest_neighbours= select_nearest_neighbours(distances, k)\n",
+    "    nn_labels= get_nn_labels(targets, nearest_neighbours)\n",
+    "    \n",
+    "    label= predict_label_majority(nn_labels)\n",
+    "    \n",
+    "    return label"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1048,7 +1018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1075,14 +1045,13 @@
     "    ----------\n",
     "    label: float\n",
     "    \"\"\"\n",
-    "\n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()"
+    "    label= float(np.mean(nn_labels))\n",
+    "    return label"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1139,7 +1108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1170,14 +1139,17 @@
     "    ----------\n",
     "    label: float\n",
     "    \"\"\"\n",
-    "\n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()"
+    "    distances= compute_distances(x, dataset, distance_function)\n",
+    "    nearest_neighbours= select_nearest_neighbours(distances, k)\n",
+    "    nn_labels= get_nn_labels(targets, nearest_neighbours)\n",
+    "    label= predict_label_average(nn_labels)\n",
+    "     \n",
+    "    return label"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1286,7 +1258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 40,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1313,7 +1285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 41,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1338,7 +1310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 42,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1385,7 +1357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 43,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1419,7 +1391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 44,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1468,7 +1440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 45,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1501,7 +1473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 46,
    "metadata": {
     "deletable": false,
     "editable": false,
