--- a/S01/SLU13 - Tree-Based Models/Exercise notebook.ipynb
+++ b/S01/SLU13 - Tree-Based Models/Exercise notebook.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -151,184 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Outlook</th>\n",
-       "      <th>Temperature</th>\n",
-       "      <th>Humidity</th>\n",
-       "      <th>Windy</th>\n",
-       "      <th>Class</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>sunny</td>\n",
-       "      <td>hot</td>\n",
-       "      <td>high</td>\n",
-       "      <td>false</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>sunny</td>\n",
-       "      <td>hot</td>\n",
-       "      <td>high</td>\n",
-       "      <td>true</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>overcast</td>\n",
-       "      <td>hot</td>\n",
-       "      <td>high</td>\n",
-       "      <td>false</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>rain</td>\n",
-       "      <td>mild</td>\n",
-       "      <td>high</td>\n",
-       "      <td>false</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>rain</td>\n",
-       "      <td>cool</td>\n",
-       "      <td>normal</td>\n",
-       "      <td>false</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>rain</td>\n",
-       "      <td>cool</td>\n",
-       "      <td>normal</td>\n",
-       "      <td>false</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>overcast</td>\n",
-       "      <td>cool</td>\n",
-       "      <td>normal</td>\n",
-       "      <td>false</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>sunny</td>\n",
-       "      <td>mild</td>\n",
-       "      <td>high</td>\n",
-       "      <td>false</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>sunny</td>\n",
-       "      <td>cool</td>\n",
-       "      <td>normal</td>\n",
-       "      <td>false</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>rain</td>\n",
-       "      <td>mild</td>\n",
-       "      <td>normal</td>\n",
-       "      <td>false</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>sunny</td>\n",
-       "      <td>mild</td>\n",
-       "      <td>normal</td>\n",
-       "      <td>true</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>overcast</td>\n",
-       "      <td>mild</td>\n",
-       "      <td>high</td>\n",
-       "      <td>true</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>overcast</td>\n",
-       "      <td>hot</td>\n",
-       "      <td>normal</td>\n",
-       "      <td>false</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>rain</td>\n",
-       "      <td>mild</td>\n",
-       "      <td>high</td>\n",
-       "      <td>true</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     Outlook Temperature Humidity  Windy  Class\n",
-       "0      sunny         hot     high  false      0\n",
-       "1      sunny         hot     high   true      0\n",
-       "2   overcast         hot     high  false      1\n",
-       "3       rain        mild     high  false      1\n",
-       "4       rain        cool   normal  false      1\n",
-       "5       rain        cool   normal  false      0\n",
-       "6   overcast        cool   normal  false      1\n",
-       "7      sunny        mild     high  false      0\n",
-       "8      sunny        cool   normal  false      1\n",
-       "9       rain        mild   normal  false      1\n",
-       "10     sunny        mild   normal   true      1\n",
-       "11  overcast        mild     high   true      1\n",
-       "12  overcast         hot   normal  false      1\n",
-       "13      rain        mild     high   true      0"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 13,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -342,18 +165,18 @@
    "outputs": [],
    "source": [
     "# single_node_gini = ...\n",
-    "def compute_probability(data):\n",
-    "    n = data.shape[0]    \n",
-    "    f = (data['Class'] == 1).sum()\n",
+    "def compute_probability(node):\n",
+    "    n = data.shape[0]\n",
+    "    f = (data['Windy'] == 'true').sum()\n",
     "\n",
     "    return f / n\n",
-    "\n",
-    "single_node_gini = compute_probability(data[data['Windy'] == 'true'])"
+    "single_node_gini = compute_probability(data)\n",
+    "# YOUR CODE HERE\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 14,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -366,7 +189,19 @@
      "solution": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-14-35e6d08902a1>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mexpected_hash_5\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'd2cbad71ff333de67d07ec676e352ab7f38248eb69c942950157220607c55e84'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[1;32massert\u001b[0m \u001b[0mhashlib\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msha256\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msingle_node_gini\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mencode\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'utf-8'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhexdigest\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m==\u001b[0m \u001b[0mexpected_hash_5\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mAssertionError\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "expected_hash_5 = 'd2cbad71ff333de67d07ec676e352ab7f38248eb69c942950157220607c55e84'\n",
     "assert hashlib.sha256(str(single_node_gini).encode('utf-8')).hexdigest() == expected_hash_5"
@@ -395,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -412,29 +247,13 @@
     "\n",
     "\n",
     "def mean_impurity(data, feature_name):\n",
-    "    information = 0\n",
-    "    values = data[feature_name].unique()\n",
-    "    e=[]\n",
-    "    for value in values:\n",
-    "        group = data[data[feature_name] == value]\n",
-    "    \n",
-    "              \n",
-    "        p = compute_probability(group)\n",
-    "        e.append(gini(p))\n",
-    "    \n",
-    "    return mean(e)"
+    "    # YOUR CODE HERE\n",
+    "    raise NotImplementedError()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 67,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -484,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -495,33 +314,20 @@
      "solution": true
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.4398148148148148\n",
-      "0.32\n",
-      "0.3673469387755103\n",
-      "0.45999999999999996\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# worst_split = 'Temperature'\n",
     "# worst_split = 'Outlook'\n",
     "# worst_split = 'Humidity'\n",
-    "worst_split = 'Windy'\n",
+    "# worst_split = 'Windy'\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "features=['Temperature','Outlook', 'Humidity', 'Windy']\n",
-    "for each in features:\n",
-    "    print(mean_impurity(data, each))"
+    "raise NotImplementedError()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -578,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -594,14 +400,15 @@
     "# incorrect_statement_1 = 'Bagging helps to deal with overfitting, which is a big risk when using Decision Trees.'\n",
     "# incorrect_statement_1 = 'Bagging involves averaging the predictions of multiple independent models.'\n",
     "# incorrect_statement_1 = 'Bagging involves creating multiple data sets by sampling observations.'\n",
-    "incorrect_statement_1 = 'Bagging involves creating multiple data sets by sampling columns.'\n",
+    "# incorrect_statement_1 = 'Bagging involves creating multiple data sets by sampling columns.'\n",
     "\n",
-    "# YOUR CODE HERE\n"
+    "# YOUR CODE HERE\n",
+    "raise NotImplementedError()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -641,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -657,14 +464,15 @@
     "# incorrect_statement_2 = 'Random forests rely on bootstrapping to build several training sets.'\n",
     "# incorrect_statement_2 = 'Random forests rely on random feature selection before each split.'\n",
     "# incorrect_statement_2 = 'Random forests aggregates the predictions of multiple models running in parallel.'\n",
-    "incorrect_statement_2 = 'Random forests aggregates the predictions of multiple models running sequentially.'\n",
+    "# incorrect_statement_2 = 'Random forests aggregates the predictions of multiple models running sequentially.'\n",
     "\n",
-    "# YOUR CODE HERE\n"
+    "# YOUR CODE HERE\n",
+    "raise NotImplementedError()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -694,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -708,16 +516,17 @@
    "outputs": [],
    "source": [
     "# incorrect_statement_3 = 'Gradient boosting fits individual trees sequentially.'\n",
-    "incorrect_statement_3 = 'Gradient boosting fits individual trees on the predictions from the previous tree.'\n",
+    "# incorrect_statement_3 = 'Gradient boosting fits individual trees on the predictions from the previous tree.'\n",
     "# incorrect_statement_3 = 'Gradient boosting fits individual trees on the pseudo-residuals of the previous tree.'\n",
     "# incorrect_statement_3 = 'Gradient boosting can be used to optimize a differentiable cost function.'\n",
     "\n",
-    "# YOUR CODE HERE\n"
+    "# YOUR CODE HERE\n",
+    "raise NotImplementedError()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "editable": false,
