--- a/S02/BLU02 - Advanced Wrangling/Exercise notebook.ipynb
+++ b/S02/BLU02 - Advanced Wrangling/Exercise notebook.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -48,6 +48,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "programs=[]\n",
+    "for x in files:\n",
+    "    if len(programs) >=1:\n",
+    "        programs.append(x)\n",
+    "    elif x == '1900...':\n",
+    "        programs.append\n",
+    "        \n",
+    "    \n",
+    "        "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "deletable": false,
@@ -70,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -83,15 +100,10 @@
    },
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'>=' not supported between instances of 'list' and 'int'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-15-0585a9e05b9b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     32\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     33\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 34\u001b[1;33m \u001b[0mprograms\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmake_programs\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-15-0585a9e05b9b>\u001b[0m in \u001b[0;36mmake_programs\u001b[1;34m()\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[1;31m# Create a list with the name of all files containing programs from\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[1;31m# 1900 inclusive and onwards (just the filename, no complete path.)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m     \u001b[0mfiles_after_1900\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mfiles\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mfiles\u001b[0m\u001b[1;33m>=\u001b[0m\u001b[1;36m1900\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m     \u001b[1;31m# YOUR CODE HERE\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: '>=' not supported between instances of 'list' and 'int'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
      ]
     }
    ],
@@ -100,41 +112,61 @@
     "    files = os.listdir('data/programs/')\n",
     "    # Create a list with the name of all files containing programs from\n",
     "    # 1900 inclusive and onwards (just the filename, no complete path.)\n",
-    "    files_after_1900=files[files>=1900]\n",
-    "\n",
+    "    # files_after_1900: List[str] = ...\n",
     "    # YOUR CODE HERE\n",
-    "    \n",
+    "    files_after_1900=[]\n",
+    "    for each in files:\n",
+    "        x=each[:4]\n",
+    "        x=int(x)\n",
+    "        if x >= 1900:\n",
+    "            files_after_1900.append(each)\n",
+    "\n",
     "    # Create a list with the name of all .csv files.\n",
     "    # seasons: List[pd.DataFrame] = ...\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    seasons=[]\n",
+    "    files2 = os.listdir('data/')\n",
+    "    for each in files2:\n",
+    "        if each.endswith(\".csv\"):\n",
+    "            seasons.append(each)\n",
     "    # Use pd.concat to create a single dataframe.\n",
     "    # programs: pd.DataFrame = ...\n",
     "    # YOUR CODE HERE\n",
-    "    programs= pd.concat([files_after_1900, seasons])\n",
+    "    x=[]\n",
+    "    for j in seasons:\n",
+    "        xx= pd.read_csv(os.path.join('data', j))\n",
+    "        x.append(xx)\n",
+    "        \n",
+    "    for j in files_after_1900:\n",
+    "        xy= pd.read_csv(os.path.join('data','programs', j))\n",
+    "        x.append(xy)\n",
+    "    programs= pd.concat(x, axis=0, sort=True)\n",
+    "    \n",
     "    # Drop the column ProgramID.\n",
-    "    programs = programs.drop(columns='B')\n",
+    "    programs = programs.drop(columns='ProgramID')\n",
     "    # YOUR CODE HERE\n",
-    "\n",
+    "    \n",
     "    # Set the index to be the column GUID, and sort the dataframe by the index \n",
     "    #( use the DataFrame.sort_index() function).\n",
     "    # Feel free to use method chaining if you want.\n",
     "    # YOUR CODE HERE\n",
     "    programs=programs.set_index('GUID').sort_index()\n",
-    "    return programs\n",
+    "    \n",
+    "    #return programs\n",
     "\n",
     "\n",
     "def read_season(file):\n",
     "    path = os.path.join('data', 'programs', file)\n",
     "    return pd.read_csv(path)\n",
     "\n",
+    "programs = make_programs()\n",
     "\n",
-    "programs = make_programs()"
+    "print(programs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -149,14 +181,14 @@
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'programs' is not defined",
+     "ename": "TypeError",
+     "evalue": "'NoneType' object is not subscriptable",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-2-d31d83bfbe19>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32massert\u001b[0m \u001b[0mprograms\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Season'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m'1900-01'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mshape\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mprograms\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mexpected_hash\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'16278afb4c2032bcddc35b915f5439ef586333e2723c2ba6cfb9cc1b58eca0e1'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;32massert\u001b[0m \u001b[0mhashlib\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msha256\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mencode\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhexdigest\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m==\u001b[0m \u001b[0mexpected_hash\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'programs' is not defined"
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-19-d31d83bfbe19>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32massert\u001b[0m \u001b[0mprograms\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Season'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m'1900-01'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mshape\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mprograms\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mexpected_hash\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'16278afb4c2032bcddc35b915f5439ef586333e2723c2ba6cfb9cc1b58eca0e1'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;32massert\u001b[0m \u001b[0mhashlib\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msha256\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mencode\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhexdigest\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m==\u001b[0m \u001b[0mexpected_hash\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'NoneType' object is not subscriptable"
      ]
     }
    ],
@@ -187,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -199,19 +231,7 @@
      "solution": false
     }
    },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'programs' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-3-297095324d30>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mprograms\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'programs' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "programs.head()"
    ]
